@@ -51,7 +51,6 @@
 
 #include <vpr/vprTypes.h>
 #include <vpr/IO/Socket/SocketTypes.h>
-#include <vpr/IO/Socket/InetAddrBase.h>
 #include <vpr/Util/IllegalArgumentException.h>
 
 
@@ -67,7 +66,7 @@ struct InetAddrHash;
  * Cross-platform abstraction to Internet address structures.  This is
  * typedef'd to vpr::InetAddr.
  */
-class VPR_CLASS_API InetAddrNSPR : public InetAddrBase
+class VPR_CLASS_API InetAddrNSPR
 {
 public:
    static const InetAddrNSPR AnyAddr;     // constructor defaults to any addr
