@@ -50,7 +50,6 @@
 #include <vector>
 
 #include <vpr/vprTypes.h>
-#include <vpr/IO/Socket/InetAddrBase.h>
 #include <vpr/IO/Socket/SocketTypes.h>
 #include <vpr/IO/Socket/UnknownHostException.h>
 #include <vpr/Util/IllegalArgumentException.h>
@@ -70,7 +69,7 @@ struct InetAddrHash;
  * Cross-platform abstraction to Internet address structures.  This is
  * typedef'd to vpr::InetAddr.
  */
-class VPR_CLASS_API InetAddrBSD : public InetAddrBase
+class VPR_CLASS_API InetAddrBSD
 {
 public:
    static const InetAddrBSD AnyAddr;
