@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2005-12-14 patrickh Removed vpr::InetAddrBase.
+                    NEW VERSION: 1.1.14
 2005-12-12 patrickh Changed the signatures of vpr::InetAddr::getLocalHost(),
                     vpr::InetAddr::getAllLocalAddrs(), and
                     vpr::InetAddr::getHostname() to return a result rather than
